[package]
name = "wxve-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }
js-sys = "0.3"
pulldown-cmark = "0.13"
